creusot/tests/should_fail/prusti/with_static/use_snap.stderr
error[creusot]: function was supposed to return data with type `&'a u32` but it is returning data with type `&'static u32`
                expected `'a` found `'static`
 --> use_snap.rs:7:5
  |
7 |     snap(x)
  |     ^^^^^^^

error: aborting due to previous error

